--- a/dotfiles/.atom/styles.less
+++ b/dotfiles/.atom/styles.less
@@ -2,7 +2,8 @@
   border-left: 2px solid #e41e91;
 }
 
-.editor .selection .region {
+.editor .selection .region,
+.tree-view-dialog .mini.editor .selection {
   background: #0bf;
   opacity: .25;
 }
